[gd_scene load_steps=6 format=3 uid="uid://ey8g66byjq6j"]

[ext_resource type="Texture2D" uid="uid://cnutgbruxb6ju" path="res://icon.svg" id="1_jmcj5"]
[ext_resource type="Script" path="res://enemigo.gd" id="1_po37d"]
[ext_resource type="PackedScene" uid="uid://jnggkvfy258f" path="res://killzone.tscn" id="2_jbmdn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7pq5y"]
size = Vector2(118, 117)

[sub_resource type="SpriteFrames" id="SpriteFrames_4l80b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_jmcj5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Enemigo" type="Node2D"]
script = ExtResource("1_po37d")

[node name="killzone" parent="." instance=ExtResource("2_jbmdn")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="killzone"]
position = Vector2(-1, 1.5)
shape = SubResource("RectangleShape2D_7pq5y")

[node name="RayCastDere" type="RayCast2D" parent="killzone"]
visible = false
target_position = Vector2(61, 1)

[node name="RayCastDerePiso" type="RayCast2D" parent="killzone"]
visible = false
target_position = Vector2(102, 76)

[node name="RayCastIZQPiso" type="RayCast2D" parent="killzone"]
visible = false
target_position = Vector2(-86, 78)

[node name="RayCastIzq" type="RayCast2D" parent="killzone"]
visible = false
target_position = Vector2(-62, 0)

[node name="RayCastArr" type="RayCast2D" parent="killzone"]
visible = false
target_position = Vector2(0, -64)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 2)
sprite_frames = SubResource("SpriteFrames_4l80b")
